[tool.poetry]
name = "covid-19"
version = "0.1.0"
description = "Prediction Model for Number of Total Infections per Country"
authors = ["Arash Zandi <arash.zandi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
statsmodels = "^0.11.1"
pandas = "^1.0"
numpy = "^1.18"
scikit-learn = "^0.22.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
